--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     
     <!-- Customizable Image 1: Replace with your photo or a romantic image -->
     <img src="images/kitten-hearts.gif" alt="Romantic Photo">
-    
+
     <p>Hii bebi,</p>
     <p>Hii bebii you're so cute, gorgeous and I adore you so much!!. I made this specially just for you ^^, will you be my valentine this incoming February 14th? although I know that you will be attending an event I wanted to ask you anyway :p.</p>
     <p>Here are some reasons why:</p>
@@ -158,7 +158,7 @@
     <div class="response">
         <p>So, what do you say?</p>
  <!-- Customizable Image 3: Replace with another image, like a heart or memory -->
-    <img src="images/muach.gif">
+    <img src="images/muach.gif" alt="Muach Image">
     </div>
         <button onclick="alert('Yayyyyy!💜')">Yes, I'll be your Valentine</button>
     </div>
@@ -173,3 +173,4 @@
 </body>
 
 </html>
+
