--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Customizable Image 1: Replace with your photo or a romantic image -->
     <img src="kitten-hearts.gif">
 
-    <p>Hii bebi,</p>
+    <p>Hii bebii,</p>
     <p>Hii bebii you're so cute, gorgeous and I adore you so much!!. I made this specially just for you ^^, will you be my valentine this incoming February 14th? although I know that you will be attending an event I wanted to ask you anyway :p.</p>
     <p>Here are some reasons why:</p>
     <ul id="reasonsList" style="list-style: none; padding: 0;">
@@ -171,3 +171,4 @@
     </script>
 </body>
 </html>
+
