--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
         <p>So, what do you say?</p>
         <!-- Customizable Image 3: Replace with another image, like a heart or memory -->
         <img src="muach.gif">
+        </div>
+    <div
         <button onclick="alert('Yayyyyy!💜')">Yes, I'll be your Valentine</button>
     </div>
     
@@ -171,4 +173,5 @@
     </script>
 </body>
 </html>
+
 
